# aeon

./: .gitignore  ABSTRACT.md  Al-4-1234  Cargo.toml  DESIGN.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Mass-4-1234  Project.toml  README.md  _build.zig  aaxi.toml  axicombo.slurm  axicombo2.slurm  brill.slurm  brill.toml  brillsearch.toml  build.zig  fill.slurm  gengraph.py  main.jl  main_test.jl  new.csv  output.vtu  output3d.vtu  plot.py  prolate.slurm  ratios.csv  rsync.txt  rsync.zsh  rsync_output.txt  search.slurm  seed.vtk  seed.vtu  sphere.slurm  template.toml
Analyze/: Manifest.toml  Project.toml  diagnostic.jl  massfill.jl  powerlaw.jl  weights.jl
Analyze/data/: 0.3.csv  0.33603529.txt  history-fine-struct-gauss1.csv  history21.csv  history21_both.csv  history21_wrong_scaling.csv  info21.toml  search.csv
Analyze/src/: Analyze.jl
CodeGen/: Manifest.toml  Project.toml  main.jl
CodeGen/src/: CodeGen.jl
config/: axibrill.toml  axicombo.search.toml  axicombo.toml  axicombo2.search.toml  axicombo2.toml  axigauss.search.toml  axigauss.toml  axiprolate.toml  axiscalar-crit.toml  axiscalar.toml  brillcrit.toml  brillev.toml  brillid.toml  prolatecrit.toml  prolateev.toml  prolateid.toml  scalarid.toml  spherecrit.toml  sphereev.toml  sphereev0.2.toml  sphereev0.3.toml  sphereev0.31.toml  sphereev0.4.toml  sphereev1.toml  sphereid.toml  sphereid0.2.toml  sphereid0.3.toml  sphereid0.31.toml  sphereid0.4.toml  sphereid1.toml  sphgauss1-24.search.toml  sphgauss1-24.toml  sphgauss1-cole.toml  sphgauss1-crit.toml  sphgauss1-fill.toml  sphgauss1.fill.toml  sphgauss1.search.toml  sphgauss1.toml  sphgauss2-cole.toml  sphgauss2.fill.toml  (+8 more)
crates/aeon_app/: Cargo.toml
crates/aeon_app/src/: config.rs  file.rs  float.rs  lib.rs  progress.rs
crates/aeon_array/: Cargo.toml
crates/aeon_axisymmetry/: Cargo.toml  build.rs
crates/aeon_basis/: Cargo.toml
crates/aeon_config/: Cargo.toml
crates/aeon_geometry/: Cargo.toml
crates/aeon_macros/: Cargo.toml
crates/aeon_macros/src/: derive.rs  lagrange.rs  lib.rs  tensor.rs
crates/aeon_stencils/: Cargo.toml
crates/aeon_tensor/: Cargo.toml
crates/aeon_tensor/src/: axi.rs  axisymmetry.rs  compound.rs  field.rs  indices.rs  lib.rs  metric.rs  storage.rs
crates/aeon_tensor/src/metric/: dims.rs  mod.rs
examples/: adaptive.zig  advection.rs  brill.zig  brill2.zig  brillfem.zig  evbrill.rs  evolution.rs  evolution.zig  evolution2.zig  idbrill.rs  idbrill_hyperbolic.rs  idbrill_hyperbolic_old.rs  idbrill_parabolic.rs  poisson.rs  poisson.zig  poisson_1d.rs  prolong.zig  test.zig  toyproblem.zig  transfer.rs  wamr.rs  wave.rs
examples/evolution/: bcs.rs  config.rs  eqs.rs  main.rs
examples/evolution2/: config.rs  main.rs
examples_old/: poisson.rs
notebooks/: axisymmetric-initial-garfinkle.ipynb  axisymmetric-initial-rinne.ipynb
output/: grid3d.vtu  poisson2d-4o.vtu
scripts/: axisymmetric-initial-garfinkle.ipynb  axisymmetric.py  axisymmetry-garfinkle.ipynb  axisymmetry-initial-choptuik.ipynb  axisymmetry-initial.ipynb  axisymmetry.ipynb  eqs.c  geometric.h  hyperbolic.h  hyperbolic_regular.h  massfile.py  pyproject.toml  readh5.py  tensor.py  tensor_garfinkle.py  weights.jl
scripts/data/: FD_19_fam_2.csv  FD_19_fam_3.csv  FD_phi_origin.txt
scripts/notebooks/: animations.ipynb  anims_matplotlib.ipynb  anims_pyvista.ipynb  evolve_history.ipynb  lapse.ipynb  renders.ipynb  spherical.ipynb
scripts/scripts/: visual.py
src/: Aeon.jl  aeon.zig  analytic.jl  arena.rs  array.rs  array.zig  basis.jl  common.rs  domain.jl  elliptic2.rs  grid.jl  index.zig  lib.rs  main.zig  shared.rs  splitarray.jl  stencils.rs  stree.jl  system.rs  system.zig  threads.zig  transform.jl  utils.jl  utils.zig  vtk.jl  vtkio.zig
src/Analytic/: Analytic.jl  basis.jl  combine.jl  covariant.jl  directional.jl  field.jl  function.jl  functional.jl  gaussian.jl  identity.jl  magic.jl  monomial.jl  operator.jl  scale.jl  transform.jl  unkown.jl
src/Approx/: Approx.jl  covariant.jl  domain.jl  function.jl  mls.jl  operator.jl  square.jl  wls.jl
src/Bases/: Bases.jl  basis.jl  block.jl
src/Blocks/: Blocks.jl  array.jl  basis.jl  block.jl  boundary.jl  derivative.jl  lagrange.jl  point.jl  transfer.jl
src/Coords/: Coords.jl  affine.jl  tensor.jl
src/Engine/: Engine.jl  basis.jl  wls.jl
src/Geometry/: Geometry.jl  Geometry.jl.283969.mem  Geometry.jl.294226.mem  Geometry.jl.298955.mem  affine.jl  box.jl  box.jl.302169.mem  index.jl  index.jl.284984.mem  index.jl.302169.mem  splitarray.jl  tensor.jl  transform.jl  tree.jl
src/Grid/: Grid.jl  cubetree.jl  domain.jl  mesh.jl  method.jl  node.jl  stree.jl  vertex.jl  writer.jl
src/Method/: Method.jl  approx.jl  basis.jl  mesh.jl  vertex.jl  writer.jl
src/Methods/: Methods.jl  block.jl  cell.jl  dofs.jl  element.jl  interface.jl  mesh.jl  method.jl  (+8 more)
test/: runtests.jl
tools/_old/evbrill/: Cargo.toml
tools/_old/evbrill/src/: explicit.rs  main.rs  shared.rs
tools/_old/evbrill/symbolicc/: axisymmetry.ipynb  geometric.h  symc.c
tools/aaxi/: Cargo.toml  README.md
tools/aaxi/src/: config.rs  eqs.rs  history.rs  horizon.rs  main.rs  misc.rs  searches.rs  systems.rs  transform.rs
tools/aaxi/src/eqs/: api.rs  mod.rs
tools/aaxi/src/eqs/old/: metric.rs  mod.rs  tensor.rs
tools/aaxi/src/horizon/: mod.rs
tools/aaxi/src/rinne/: eqs.rs  evolve.rs  garfinkle.rs  horizon.rs  initial.rs  mod.rs  systems.rs
tools/aaxi/src/run/: config.rs  evolve.rs  history.rs  initial.rs  interval.rs  mod.rs  status.rs
tools/aaxi/src/run/config/: execute.rs  inline.rs  mod.rs  validate.rs
tools/aaxi/src/schwarzschild/: mod.rs
tools/aaxi/src/search/: config.rs  history.rs  mod.rs
tools/asphere/: Cargo.toml  README.md
tools/asphere/src/: cole.rs  config.rs  main.rs  misc.rs  system.rs
tools/asphere/src/fill/: config.rs  history.rs  mod.rs
tools/asphere/src/run/: config.rs  evolve.rs  history.rs  initial.rs  mod.rs
tools/asphere/src/run/config/: execute.rs  mod.rs
tools/asphere/src/search/: config.rs  history.rs  mod.rs
tools/evaxi/: Cargo.toml
tools/evaxi/src/: main.rs  tensor.rs
(+306 files in other folders)
