# Workspace configuration
[workspace]
members = ["crates/*", "tools/asphere", "tools/aaxi"]
default-members = [
    "crates/aeon_macros",
    "crates/aeon_tensor",
    "crates/aeon_config",

    "tools/aaxi",
    "tools/asphere",
    ".",
]
resolver = "2"

[workspace.dependencies]
aeon = { path = "." }
aeon_config = { path = "crates/aeon_config" }
aeon_macros = { path = "crates/aeon_macros" }
aeon_tensor = { path = "crates/aeon_tensor" }

bitvec = { version = "1.0.1", features = ["serde"] }
bumpalo = "3.16.0"
cc = "1.0"
clap = "4.5.4"
chumsky = "0.10.1"
circular-queue = "0.2.7"
color-eyre = "0.6.3"
console = "0.15.11"
csv = "1.3.1"
datasize = "0.2.15"
env_logger = "0.11"
eyre = "0.6.12"
faer = "0.20.1"
indicatif = "0.17.11"
itertools = "0.13.0"
log = "0.4"
num-traits = "0.2.19"
paste = "1.0.15"
rand = "0.9.1"
rayon = "1.10.0"
reborrow = "0.5.5"
ron = "0.8"
serde = { version = "1.0.200", features = ["derive"] }
serde_with = "3.12.0"
thiserror = "2.0.9"
thread_local = "1.1.8"
toml = "0.8.19"

# Main package (`aeon`) configuration.
[package]
name = "aeon"
version = "0.1.0"
edition = "2024"
exclude = ["crates/", "tools/"]
readme = "README.md"

[dependencies]
aeon_macros.workspace = true

bitvec.workspace = true
bumpalo.workspace = true
datasize.workspace = true
faer.workspace = true
log.workspace = true
num-traits.workspace = true
rand.workspace = true
rayon.workspace = true
reborrow.workspace = true
ron.workspace = true
serde.workspace = true
thiserror.workspace = true
thread_local.workspace = true
vtkio = "0.7.0-rc1"

[dev-dependencies]
env_logger.workspace = true
eyre.workspace = true

[[example]]
name = "wamr"
path = "examples/wamr.rs"

[[example]]
name = "wave"
path = "examples/wave.rs"

[[example]]
name = "transfer"
path = "examples/transfer.rs"

[[example]]
name = "poisson"
path = "examples/poisson.rs"
