[project]
name = "scripts"
version = "0.1.0"
description = "Small set of scripts for analyzing aeon output"
authors = [
    {name = "lukazmm",email = "lukas.m.mesicek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
