[project]
name = "scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "sylviamesicek",email = "sylvia.mesicek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyvista (>=0.46.3,<0.47.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "imageio[ffmpeg] (>=2.37.0,<3.0.0)",
    "trame (>=3.12.0,<4.0.0)",
    "vtk (>=9.5.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
