[project]
name = "scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Sylvia Mesicek"}
]
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ipynbname (>=2025.8.0.0,<2026.0.0.0)",
    "pandas (>=3.0.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
