[package]
name = "aeon-app"
version = "0.3.3"
edition = "2021"
description = "Helper package for building binaries with aeon-tk"
authors = ["Sylvia Mesicek <sylvia.mesicek@gmail.com>"]
homepage = "https://github.com/sylviamesicek/aeon"
repository = "https://github.com/sylviamesicek/aeon"
license = "MIT OR Apache-2.0"
include = ["../../LICENSE-APACHE", "../../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[dependencies]
bincode.workspace = true
clap.workspace = true
chumsky.workspace = true
indicatif.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
rand.workspace = true
