[package]
name = "aeon-app"
version.workspace = true
edition = "2021"
description = "Helper package for building binaries with aeon-tk"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
include = ["../../LICENSE-APACHE", "../../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[dependencies]
bincode.workspace = true
clap.workspace = true
chumsky.workspace = true
indicatif.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
rand.workspace = true
