[package]
name = "aeon-macros"
version = "0.3.3"
edition = "2021"
description = "Macros exported by aeon-tk"
authors = ["Sylvia Mesicek <sylvia.mesicek@gmail.com>"]
homepage = "https://github.com/sylviamesicek/aeon"
repository = "https://github.com/sylviamesicek/aeon"
license = "MIT OR Apache-2.0"
include = ["../../LICENSE-APACHE", "../../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

num = "0.4.1"
