[package]
name = "aeon-tensor"
version = "0.3.3"
edition = "2021"
description = "Helper package for working with tensor-based PDEs in aeon-tk binaries"
authors = ["Sylvia Mesicek <sylvia.mesicek@gmail.com>"]
homepage = "https://github.com/sylviamesicek/aeon"
repository = "https://github.com/sylviamesicek/aeon"
license = "MIT OR Apache-2.0"
include = ["../../LICENSE-APACHE", "../../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[dependencies]
aeon-macros.workspace = true
paste.workspace = true
