[package]
name = "aaxi"
version = "0.3.1"
edition = "2024"

[dependencies]
aeon.workspace = true
aeon_app.workspace = true
aeon_tensor.workspace = true
bincode.workspace = true
clap.workspace = true
chumsky.workspace = true
color-eyre.workspace = true
console.workspace = true
csv.workspace = true
datasize.workspace = true
eyre.workspace = true
faer.workspace = true
indicatif.workspace = true
log.workspace = true
reborrow.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
toml.workspace = true
paste.workspace = true

mpi = { version = "0.8.0", optional = true }

[dev-dependencies]
rand.workspace = true

[features]
default = ["mpi"]
