[package]
name = "aaxi"
version.workspace = true
edition = "2024"
description = "Binary for simulating axisymmetric critical phenomena"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
include = ["../../LICENSE-APACHE", "../../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[dependencies]
aeon.workspace = true
aeon-app.workspace = true
aeon-tensor.workspace = true
bincode.workspace = true
clap.workspace = true
chumsky.workspace = true
color-eyre.workspace = true
console.workspace = true
csv.workspace = true
datasize.workspace = true
eyre.workspace = true
env_logger.workspace = true
faer.workspace = true
indicatif.workspace = true
log.workspace = true
reborrow.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
toml.workspace = true
paste.workspace = true

mpi = { version = "0.8.0", optional = true }

[dev-dependencies]
rand.workspace = true

[features]
default = []
