[package]
name = "asphere"
version = "0.3.3"
edition = "2024"
description = "Binary for simulating spherically symmetric critical phenomena"
authors = ["Sylvia Mesicek <sylvia.mesicek@gmail.com>"]
homepage = "https://github.com/sylviamesicek/aeon"
repository = "https://github.com/sylviamesicek/aeon"
license = "MIT OR Apache-2.0"
readme = "README.md"
include = ["../../LICENSE-APACHE", "../../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[features]
default = ["progress"]
progress = []

[dependencies]
aeon.workspace = true
aeon-app.workspace = true
clap.workspace = true
color-eyre.workspace = true
console.workspace = true
csv.workspace = true
datasize.workspace = true
eyre.workspace = true
env_logger.workspace = true
indicatif.workspace = true
log.workspace = true
rayon.workspace = true
reborrow.workspace = true
ringbuffer.workspace = true
serde.workspace = true
