[package]
name = "evaxi"
version = "0.1.0"
edition = "2021"

[dependencies]
aeon.workspace = true
aeon_tensor.workspace = true

anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
rayon.workspace = true
reborrow.workspace = true
ron.workspace = true
sharedaxi.workspace = true
