[package]
name = "evbrill"
version = "0.1.0"
edition = "2021"

[dependencies]
aeon.workspace = true
aeon_tensor.workspace = true

clap.workspace = true
env_logger.workspace = true
itertools.workspace = true
log.workspace = true
rand.workspace = true
rayon.workspace = true
reborrow.workspace = true
ron.workspace = true

[build-dependencies]
cc.workspace = true
